2005-08-30  Sam Steingold  <sds@gnu.org>

	* configure: when --with-dynamic-ffi is supplied, but the FFI
	fails to build, issue an error message and fail

2005-08-30  Sam Steingold  <sds@gnu.org>

	* makemake.in (LDFLAGS): fixed handling (were effectively ignored)

2005-08-30  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (PACK, PACKOPT, PACKEXT): remove,
	assume tar/bzip2/gzip are present on the developer's machine
	(linux-distrib, linux--distrib): remove (unused)
	(distrib): do not depend on linux-distrib

2005-08-29  Sam Steingold  <sds@gnu.org>

	* makemake.in (PWDCMD): removed
	(distrib) [cygwin]: fixed tar.bz2 location

2005-08-29  Sam Steingold  <sds@gnu.org>

	* version.sh: clisp 2.35 release

2005-08-29  Sam Steingold  <sds@gnu.org>

	* m4/floatparam.m4: require gt_TYPE_LONGDOUBLE instead of CL_LONGDOUBLE
	use $gt_cv_c_long_double instead of $cl_cv_c_longdouble
	* m4/intparam.m4: require gl_AC_TYPE_LONG_LONG and gt_TYPE_LONGDOUBLE
	instead of CL_LONGLONG and CL_LONGDOUBLE
	use $ac_cv_type_long_long and $gt_cv_c_long_double
	instead of $cl_cv_c_longlong and $cl_cv_c_longdouble

2005-08-27  Bruno Haible  <bruno@clisp.org>

	Make the long-float overflow check work on 64-bit platforms.
	* aridecl.d (LF_exp_mid, LF_exp_high): Define as 'unsigned int',
	not 'unsigned long'.

2005-08-27  Bruno Haible  <bruno@clisp.org>

	More cross-compilation support.
	* m4/intparam.m4: New file.
	* m4/floatparam.m4: New file.
	* m4/param.m4: Renamed from m4/intparam.m4.
	(CL_MACHINE): Add an additional CROSS_MACRO parameter.
	* configure.in (CL_MACHINE): When cross-compiling, use
	CL_INTPARAM_CROSS and CL_FLOATPARAM_CROSS.

2005-08-27  Bruno Haible  <bruno@clisp.org>

	* m4/rusage.m4 (CL_RUSAGE): Fix error when cross-compiling.

2005-08-29  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (src/configure): depend on version.sh

2005-08-28  Sam Steingold  <sds@gnu.org>

	* noreadline.d: add prototypes to avoid warnings

2005-08-28  Sam Steingold  <sds@gnu.org>
